# pirogue-admin

./: .gitignore  .gitmodules  .pylintrc  README.md  build_deb.sh  setup.py  tag
.github/workflows/: publish-on-pypi.yml
debian/: changelog  control  gbp.conf  rules
pirogue-admin/: pyproject.toml  requirements.txt  setup.py
pirogue-admin-api/: README.md
pirogue-admin-api/src/protos/pirogue_admin_api/: network.proto
pirogue-admin-api/src/python/: pyproject.toml  setup.py
pirogue-admin-api/src/python/debian/: changelog  control
pirogue-admin-api/src/python/pirogue_admin_api/: network_pb2.py  network_pb2.pyi  network_pb2_grpc.py
pirogue-admin-client/: README.md  pyproject.toml  requirements.txt  setup.py
pirogue-admin-client/debian/: changelog  control
pirogue-admin-client/pirogue_admin_client/: __init__.py  adapters.py  cli.py
pirogue-admin/debian/: changelog  control  copyright  network-configuration-monitor.service  pirogue-admin.dirs  pirogue-admin.install  pirogue-admin.service  rules
pirogue-admin/pirogue_admin/: network_configuration_monitor.py  tools.py
pirogue-admin/pirogue_admin/cmd/: cli.py  wireguard_cli.py
pirogue-admin/pirogue_admin/daemon/: __init__.py  servicers_impl.py  user_access.py  utils.py
pirogue-admin/pirogue_admin/package_config/: __init__.py  conditions.py  formatters.py
pirogue-admin/pirogue_admin/system_config/: __init__.py  wireguard.py
pirogue_admin/cmd/: cli.py
pirogue_admin/package_config/: __init__.py  conditions.py  formatters.py
pirogue_admin/system_config/: __init__.py
